[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-macros = "0.4.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7.10"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-native-tls", "postgres", "json", "time", "chrono" ] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.51"
dotenvy = "0.15.7"